--- a/src/components/Register/RegisterForm.module.css
+++ b/src/components/Register/RegisterForm.module.css
@@ -8,13 +8,14 @@
   align-items: center;
   justify-content: center;
   gap: 30px;
+  margin: 0;
 }
 
 .logo__container {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
 }
 
 .label div {
@@ -42,11 +43,16 @@
   justify-content: center;
 }
 
+.iconWallet {
+  height: 30px;
+  width: 100%;
+}
+
 .title {
   font-family: Poppins;
   font-weight: 700;
-  font-size: 30px;
-  color: rgba(0, 0, 0, 1);
+  font-size: 22px;
+  color: var(--black);
 }
 
 .input {
@@ -98,7 +104,7 @@
     width: 320px;
     height: 568px;
     margin: 0 auto;
-    margin-top: 80px;
+    /* margin-top: 80px; */
   }
 
   .input {
@@ -111,6 +117,16 @@
   .container {
     position: absolute;
     bottom: 50px;
+  }
+  .logo__container {
+    gap: 20px;
+  }
+  .iconWallet {
+    height: 40px;
+    width: 100%;
+  }
+  .title {
+    font-size: 30px;
   }
 
   .input {
